--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="file:///D:/online%20shop%20bnegi/index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="#">Our products</a>
-        <a class="nav-link" href="Rajendrahandloom.github.io/contact.html">Contact Us</a>
+        <a class="nav-link" href="/contact.html">Contact Us</a>
         <a class="nav-link" href="file:///D:/online%20shop%20bnegi/about.html">About Us</a>
         
       </div>
