--- a/index.html
+++ b/index.html
@@ -105,6 +105,28 @@
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
+            <!-- next>
+ <div class="c1">
+        <img src="img/bedser.jpg" alt="pillow image">
+        <h2>BedServer</h2>
+        <a href="#"><button>See More To Buy Now</button></a>
+        <h3>Rajendra Handloom Khurjagate Chandausi
+        </h3>
+          </div>
+ <div class="c1">
+        <img src="img/spap.jpg" alt="pillow image">
+        <h2>Aprin</h2>
+        <a href="#"><button>See More To Buy Now</button></a>
+        <h3>Rajendra Handloom Khurjagate Chandausi
+        </h3>
+          </div>
+ <div class="c1">
+        <img src="img/yoga.jpg" alt="pillow image">
+        <h2>Yoga Met</h2>
+        <a href="#"><button>See More To Buy Now</button></a>
+        <h3>Rajendra Handloom Khurjagate Chandausi
+        </h3>
+          </div>
             </section>
             <footer id="foot">
           <h1> Rajendra Handloom Khurjagate Chandausi Near Dr. Salil Dixit</h1>
