--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="nav"> 
 <h3>Rajendra Handloom</h3>
 
-<<<<<<< HEAD
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,8 +26,7 @@
     </div>
   </nav>
 </div>
-=======
->>>>>>> 9587d1998202e2d5d3f67ad4a40a0e2fa99c207b
+
     </section>
     <div class="container-fluid">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -75,7 +74,7 @@
 </h3>
   </div>
     </section>
-    <!--Twooooooooooooooooooooooooooooooo-->
+   
     <section id="cards" class="clearfix">
       <div class="c1">
     <img src="img/carpet401.jpg" alt="carpet image">
@@ -123,6 +122,7 @@
         </h3>
           </div>
             <!-- next>
+<section id="cards" class="clearfix">
  <div class="c1">
         <img src="img/bedser.jpg" alt="pillow image">
         <h2>BedServer</h2>
@@ -147,7 +147,8 @@
             </section>
             <footer id="foot">
           <h1> Rajendra Handloom Khurjagate Chandausi Near Dr. Salil Dixit</h1>
-            </footer>
+</section>
+</footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
