--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
             <br>
 <section id="cards" class="clearfix">
  <div class="c1">
-        <img src="img/bedser.jpg" alt="pillow image">
+        <img src="img/bedser.jpg" alt="bedser image">
         <h2>BedServer</h2>
         <a href="#"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
  <div class="c1">
-        <img src="img/spap.jpg" alt="pillow image">
+        <img src="img/spap.jpg" alt="spapa image">
         <h2>Aprin</h2>
         <a href="#"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
  <div class="c1">
-        <img src="img/yoga.jpg" alt="pillow image">
+        <img src="img/yoga.jpg" alt="yoga image">
         <h2>Yoga Met</h2>
         <a href="#"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
