--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="c1">
     <img src="img/ghaas.jpg" alt="ghass image">
     <h2>Doormets</h2>
-    <a href="#"><button>See More To Buy Now</button></a>
+    <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=638396&search=1272829"><button>See More To Buy Now</button></a>
     <h3>Rajendra Handloom Khurjagate Chandausi
     </h3>
       </div>
@@ -143,7 +143,7 @@
  <div class="c1">
         <img src="img/yoga.jpg" alt="yoga image">
         <h2>Yoga Met</h2>
-        <a href="#"><button>See More To Buy Now</button></a>
+        <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=643226&search=1282115"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
