--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
  <div class="c1">
         <img src="img/bedser.jpg" alt="bedser image">
         <h2>BedServer</h2>
-        <a href="#"><button>See More To Buy Now</button></a>
+        <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=643250&search=1282240"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
