--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
  <div class="c1">
         <img src="img/spap.jpg" alt="spapa image">
         <h2>Aprin</h2>
-        <a href="#"><button>See More To Buy Now</button></a>
+        <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=645354&search=1287694"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
@@ -151,6 +151,7 @@
             <footer id="foot">
           <h1> Rajendra Handloom Khurjagate Chandausi Near Dr. Salil Dixit</h1>
 </section>
+
 </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
