--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="c1">
 <img src="img/sofa.jpg" alt="sofacover image">
 <h2>SofaCover</h2>
-<a href="#"><button>See More To Buy Now</button></a>
+<a href="https://sharemystore.com/rajendra_2ymo/products/?cat=645497&search=1288257"><button>See More To Buy Now</button></a>
 <h3>Rajendra Handloom Khurjagate Chandausi
 </h3>
   </div>
@@ -117,7 +117,7 @@
           <div class="c1">
         <img src="img/pillow.jpg" alt="pillow image">
         <h2>Pillows</h2>
-        <a href="#"><button>See More To Buy Now</button></a>
+        <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=645491&search=1288297"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
