--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="c1">
         <img src="img/towle.jpeg" alt="Towles image">
         <h2>Towels</h2>
-        <a href="#"><button>See More To Buy Now</button></a>
+        <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=645498&search=1288650"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
