--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="c1">
         <img src="img/kushion.jpg" alt="kushion image">
         <h2>kushions</h2>
-        <a href="#"><button>See More To Buy Now</button></a>
+        <a href="https://sharemystore.com/rajendra_2ymo/products/?cat=645784&search=1288856"><button>See More To Buy Now</button></a>
         <h3>Rajendra Handloom Khurjagate Chandausi
         </h3>
           </div>
